fixing center alignment on IE11 for flexbox items

--- a/CancerGov/_src/StyleSheets/AppModuleSpecific/cts/_NCI.Delighters.scss
+++ b/CancerGov/_src/StyleSheets/AppModuleSpecific/cts/_NCI.Delighters.scss
@@ -167,6 +167,13 @@
   }
 }
 
+// IE11 hack since flexbox align-items ignores max-height setting
+@media all and (-ms-high-contrast:none) {
+  .cts-share a {
+    height: 37px;
+  }
+}
+
 
 @include bp(medium-down) {
   // centering the share this clinical trial text
